attempt 6 at fixing z-index bug

--- a/src/components/synopsis.module.css
+++ b/src/components/synopsis.module.css
@@ -5,7 +5,7 @@
 
 .synBackground::after {
     content: '';
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     height: 50%;
